fixed z-index problem

--- a/css/iosStyle/products-ios.css
+++ b/css/iosStyle/products-ios.css
@@ -1187,7 +1187,7 @@ html.no-touchevents .product-page .upsells .scroll-container ul li:nth-child(1) 
     }
 
     footer{
-        z-index: 9994 !important;
+        z-index: 25 !important;
     }
 
     .product-page-sizes {
